minor changes to style.css to fix spacing issue with blog post images. notFound has no changes.

--- a/public/assets/nadb/css/style.css
+++ b/public/assets/nadb/css/style.css
@@ -43,8 +43,10 @@ footer {
     flex: 0 0 auto;
     background: #335566;
     color: #eee;
-    padding: 2.5rem 0 10rem 0; /* adjust if necessary */
-    margin-top: 1rem; /* adjust if necessary */
+    padding: 2.5rem 0 10rem 0;
+    /* adjust if necessary */
+    margin-top: 1rem;
+    /* adjust if necessary */
 }
 
 footer h5 {
@@ -71,11 +73,15 @@ footer a:hover {
     background-position: center center;
     background-size: cover;
 }
+
+
 /* NOTE: if you use a jumbotron background image you will need to also uncomment the padding in the xl media query */
 
-.jumbotron h1, .jumbotron h2 {
-   text-shadow: 1px 1px 10px #000;
+.jumbotron h1,
+.jumbotron h2 {
+    text-shadow: 1px 1px 10px #000;
 }
+
 .required {
     color: red;
 }
@@ -87,13 +93,16 @@ footer a:hover {
 }
 
 p:first-of-type {
-    margin-top: 2rem;
+    /*    margin-top: 2rem;*/
 }
+
+
 /* Next and Previous Pagination */
+
 .pager {
     font-family: 'Lato', sans-serif;
     font-size: 16px;
-      margin-bottom: 60px;
+    margin-bottom: 60px;
     text-align: left;
 }
 
@@ -102,7 +111,10 @@ form {
     font-size: 16px;
 }
 
+
 /* Post Comments */
+
+
 /*.comment-body {
     overflow: hidden;
     position: relative;
@@ -132,67 +144,176 @@ form {
     color: blue;
 }
 */
+
 .glyphicon-refresh-animate {
     -animation: spin .7s infinite linear;
     -webkit-animation: spin2 .7s infinite linear;
 }
 
 @-webkit-keyframes spin2 {
-    from { -webkit-transform: rotate(0deg);}
-    to { -webkit-transform: rotate(360deg);}
+    from {
+        -webkit-transform: rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(360deg);
+    }
 }
 
 @keyframes spin {
-    from { transform: scale(1) rotate(0deg);}
-    to { transform: scale(1) rotate(360deg);}
+    from {
+        transform: scale(1) rotate(0deg);
+    }
+    to {
+        transform: scale(1) rotate(360deg);
+    }
 }
+
+
+/* Spacer Utilities */
+
+.p-t-1 {
+    padding-top: 1rem;
+}
+
+.p-t-2 {
+    padding-top: 2rem;
+}
+
+.p-t-3 {
+    padding-top: 3rem;
+}
+
+.p-b-1 {
+    padding-bottom: 1rem;
+}
+
+.p-b-2 {
+    padding-bottom: 2rem;
+}
+
+.p-b-3 {
+    padding-bottom: 3rem;
+}
+
+.m-t-1 {
+    margin-top: 1rem;
+}
+
+.m-t-2 {
+    margin-top: 2rem;
+}
+
+.m-t-3 {
+    margin-top: 3rem;
+}
+
+.m-b-1 {
+    margin-bottom: 1rem;
+}
+
+.m-b-2 {
+    margin-bottom: 2rem;
+}
+
+.m-b-3 {
+    margin-bottom: 3rem;
+}
+
+.m-a-1 {
+    margin: 1rem;
+}
+
+.m-a-2 {
+    margin: 2rem;
+}
+
+.m-a-3 {
+    margin: 3rem;
+}
+
+.p-a-1 {
+    padding: 1rem;
+}
+
+.p-a-2 {
+    padding: 2rem;
+}
+
+.p-a-3 {
+    padding: 3rem;
+}
+
+.p-tb-1 {
+    padding: 1rem 0;
+}
+
+.p-tb-2 {
+    padding: 2rem 0;
+}
+
+.p-tb-3 {
+    padding: 3rem 0;
+}
+
+.m-tb-1 {
+    margin: 1rem 0;
+}
+
+.m-tb-2 {
+    margin: 2rem 0;
+}
+
+.m-tb-3 {
+    margin: 3rem 0;
+}
+
 
 /*===================Bootstrap 3 Media Queries ==========*/
+
+
 /*=====================Mobile First Method===============*/
 
+
 /* Custom, iPhone Retina */
+
 @media only screen and (max-width: 479px) {
-    body {
-
-    }
-
+    body {}
 }
+
 
 /* Extra Small Devices, Phones */
-@media only screen and (min-width: 480px) {
-    body {
 
-    }
+@media only screen and (min-width: 480px) {
+    body {}
 }
 
-/* Small Devices, Tablets */
-@media only screen and (min-width: 768px) {
-    body {
 
-    }
+/* Small Devices, Tablets */
+
+@media only screen and (min-width: 768px) {
+    body {}
     .navbar {
         border-radius: 0 !important;
     }
 }
 
-/* Medium Devices, Desktops */
-@media only screen and (min-width: 992px) {
-    body {
 
-    }
+/* Medium Devices, Desktops */
+
+@media only screen and (min-width: 992px) {
+    body {}
 }
 
-/* Large Devices, Wide Screens */
-@media only screen and (min-width: 1200px) {
-    body {
 
-    }
+/* Large Devices, Wide Screens */
+
+@media only screen and (min-width: 1200px) {
+    body {}
     .jumbotron {
-      padding-top: 30rem;/*NOTE: Uncomment out this line if you are using a background image in the jumbotron */
+        padding-top: 30rem;
+        /*NOTE: Uncomment out this line if you are using a background image in the jumbotron */
     }
     .container {
         width: 970px;
     }
 }
-
-
